# RingOA

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  LICENSE  README.md  build.py
RingOA/: CMakeLists.txt
RingOA/fss/: dcf_eval.cpp  dcf_eval.h  dcf_gen.cpp  dcf_gen.h  dcf_key.cpp  dcf_key.h  dpf_eval.cpp  dpf_eval.h  dpf_gen.cpp  dpf_gen.h  dpf_key.cpp  dpf_key.h  fss.cpp  fss.h  prg.cpp  prg.h
RingOA/obliv_fmi/: obliv_fmi.cpp  obliv_fmi.h  obliv_rank.cpp  obliv_rank.h  sot_fmi.cpp  sot_fmi.h  sot_rank.cpp  sot_rank.h
RingOA/obliv_range/: obliv_range.cpp  obliv_range.h  sot_range.cpp  sot_range.h
RingOA/protocol/: context_2p.cpp  context_2p.h  context_3p.cpp  context_3p.h  ddcf.cpp  ddcf.h  equality.cpp  equality.h  integer_comparison.cpp  integer_comparison.h  min3.cpp  min3.h  obliv_select.cpp  obliv_select.h  protocol_io.h  ringoa.cpp  ringoa.h  ringoa_fsc.cpp  ringoa_fsc.h  shared_ot.cpp  shared_ot.h  zero_test.cpp  zero_test.h
RingOA/sharing/: beaver_triples.h  beaver_triples_gen.cpp  beaver_triples_gen.h  beaver_triples_io.cpp  beaver_triples_io.h  rep3_preprocess.cpp  rep3_preprocess.h  rep3_share_io.h  rep3_share_types.h  rep3_sharing_binary.cpp  rep3_sharing_binary.h  rep3_sharing_ring.cpp  rep3_sharing_ring.h  share_aliases.h  share_config.h  sharing_2p_binary.cpp  sharing_2p_binary.h  sharing_2p_ring.cpp  sharing_2p_ring.h
RingOA/utils/: block.h  bytes.h  file_io.h  format_types.h  logger.cpp  logger.h  network.cpp  network.h  rng.h  timer.cpp  timer.h  to_string.h  utils.h
RingOA/wm/: plain_wm.cpp  plain_wm.h
RingOA_Bench/: CMakeLists.txt  bench_common.h  gen_dataset.cpp  gen_dataset.h  obliv_fmi_bench.cpp  obliv_fmi_bench.h  obliv_range_bench.cpp  obliv_range_bench.h  obliv_select_bench.cpp  obliv_select_bench.h  ringoa_bench.cpp  ringoa_bench.h  seq_io.cpp  seq_io.h  shared_ot_bench.cpp  shared_ot_bench.h  sot_fmi_bench.cpp  sot_fmi_bench.h  sot_range_bench.cpp  sot_range_bench.h
RingOA_Tests/: CMakeLists.txt  unit_tests.cpp  unit_tests.h
RingOA_Tests/fss/: dcf_test.cpp  dcf_test.h  dpf_test.cpp  dpf_test.h  prg_test.cpp  prg_test.h
RingOA_Tests/obliv_fmi/: obliv_fmi_test.cpp  obliv_fmi_test.h  obliv_rank_test.cpp  obliv_rank_test.h  sot_fmi_test.cpp  sot_fmi_test.h  sot_rank_test.cpp  sot_rank_test.h
RingOA_Tests/obliv_range/: obliv_range_test.cpp  obliv_range_test.h  sot_range_test.cpp  sot_range_test.h
RingOA_Tests/protocol/: ddcf_test.cpp  ddcf_test.h  equality_test.cpp  equality_test.h  integer_comparison_test.cpp  integer_comparison_test.h  min3_test.cpp  min3_test.h  obliv_select_test.cpp  obliv_select_test.h  ringoa_test.cpp  ringoa_test.h  shared_ot_test.cpp  shared_ot_test.h  zt_test.cpp  zt_test.h
RingOA_Tests/sharing/: rep3_sharing_binary_test.cpp  rep3_sharing_binary_test.h  rep3_sharing_ring_test.cpp  rep3_sharing_ring_test.h  sharing_2p_binary_test.cpp  sharing_2p_binary_test.h  sharing_2p_ring_test.cpp  sharing_2p_ring_test.h
RingOA_Tests/utils/: file_io_test.cpp  file_io_test.h  network_test.cpp  network_test.h  timer_test.cpp  timer_test.h  utils_test.cpp  utils_test.h
RingOA_Tests/wm/: wm_test.cpp  wm_test.h
artifact/: ARTIFACT-APPENDIX.md
artifact/baseline/: README.md
artifact/baseline/prac/: LICENSE  Makefile  README.md  aes.hpp  avl.cpp  avl.hpp  bitutils.hpp  bst.cpp  bst.hpp  cdpf.cpp  cdpf.hpp  cdpf.tcc  cell.cpp  cell.hpp  corotypes.hpp  coroutine.hpp  dpf.hpp  duoram.hpp  duoram.tcc  heap.cpp  heap.hpp  heapsampler.cpp  heapsampler.hpp  mpcio.cpp  mpcio.hpp  mpcio.tcc  mpcops.cpp  mpcops.hpp  mpcops.tcc  online.cpp  online.hpp  options.hpp  prac.cpp  preproc.cpp  preproc.hpp  prg.hpp  rdpf.cpp  rdpf.hpp  rdpf.tcc  shapes.hpp  (+2 more)
artifact/baseline/prac/docker/: Dockerfile  build-docker  run-experiment  run-experiment-ssh  set-networking  start-docker  stop-docker  unset-networking
artifact/data-setup/: README.md
artifact/data-setup/full-text-search/: README.md  count_base.py  extract_and_clean_grch38_chr.sh  replace_ambiguous_base.py  to_upper_fasta.py
artifact/data-setup/range-search/: README.md  chromosome_ranges.py  extract_vaf_only.sh  gene_line_ranges.sh  maf_vaf_extract.sh
artifact/scripts/: README.md  benchmark_common.sh  gen_dataset.sh  parse_duoram_log.sh  parse_fts_log.sh  parse_oa_log.sh  parse_range_log.sh  reset_network.sh  run_fts_bench.sh  run_oa_bench.sh  run_range_bench.sh  set_network.sh
cmake/: RingOAConfig.cmake.in
docker/: Dockerfile  build-docker  run-fts-bench  run-oa-bench  run-range-bench  run-unit-test  start-docker
frontend/: CMakeLists.txt  bench_main.cpp  test_main.cpp
